--- a/package.json
+++ b/package.json
@@ -30,9 +30,12 @@
     "@types/node": "^20.4.5",
     "@typescript-eslint/eslint-plugin": "6.2.0",
     "@typescript-eslint/parser": "6.2.0",
+    "autoprefixer": "^10.4.16",
     "eslint": "8.45.0",
     "eslint-plugin-qwik": "^1.2.13",
+    "postcss": "^8.4.31",
     "prettier": "3.0.0",
+    "tailwindcss": "^3.3.3",
     "typescript": "5.1.6",
     "undici": "5.22.1",
     "vite": "4.4.7",
